cmake_minimum_required(VERSION 3.20)
project(Fishing)
add_definitions(
    -DUNICODE
)
add_executable(Fishing
    WIN32
    "Manager/CollisionManger.cpp"
    "win32/d2dWin32.cpp"
    "Scene/BaseScene.cpp"
    "Node.cpp"
    "App.cpp"
    "instance/oMap.cpp"
    "instance/stdafx.cpp"
    "instance/utils.cpp"
    "render/Canvas.cpp"
    "render/DisplayObject.cpp"
    "render/Sprite.cpp"
    "render/ticker.cpp"
    "render/action.cpp"
    "render/animateSprite.cpp"
    "Manager.cpp"
    "frame/fishConfig.cpp"
    "Scene/TitleScene.cpp"
    "Scene/PlayGameScene.cpp"
    "Scene/StageSelectScene.cpp"
    "frame/gold.cpp"
    "frame/bullet.cpp"
    "frame/files.cpp"
    "frame/fish.cpp"
)
target_compile_definitions(Fishing PRIVATE
    CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}
)